@@ -9,19 +9,16 @@ import android.view.MenuItem;
 import android.view.View;
 import android.widget.Button;
 import android.widget.EditText;
-import org.apache.http.HttpResponse;
+import android.widget.Toast;
 
-import org.apache.http.client.HttpClient;
-
-import org.apache.http.client.methods.HttpGet;
-
-import org.apache.http.impl.client.DefaultHttpClient;
-
-import org.apache.http.params.CoreProtocolPNames;
+import org.json.JSONException;
+import org.json.JSONObject;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URI;
+import java.net.HttpURLConnection;
+import java.net.URL;
 
 public class Login extends AppCompatActivity {
 
@@ -54,18 +51,50 @@ public class Login extends AppCompatActivity {
         return super.onOptionsItemSelected(item);
     }
 
-    private void makeHttpLoginRequest()throws Exception {
-        BufferedReader in = null;
-        String data = null;
-        HttpClient httpClient = new DefaultHttpClient();
-        HttpGet request = new HttpGet();
-        URI link = new URI("http://eventosdataapi-env.elasticbeanstalk.com/?email=a&password=1234&selector=2");
-        request.setURI(link);
-        HttpResponse response = httpClient.execute(request);
-        in = new BufferedReader(new InputStreamReader(
-                response.getEntity().getContent()));
-        Log.d("Login debug->",in.readLine());
-
+    private void makeHttpLoginRequest(final String username, final String password)throws Exception {
+        new Thread (new Runnable(){
+            @Override
+            public void run(){
+                try {
+                    String url = "http://eventosdataapi-env.elasticbeanstalk.com/?email="+username+"&password="+password+"&selector=2";
+                    URL urlObj = new URL(url);
+                    HttpURLConnection conn = (HttpURLConnection) urlObj.openConnection();
+                    conn.setDoOutput(false);
+                    conn.setRequestMethod("GET");
+                    conn.setRequestProperty("Accept-Charset", "UTF-8");
+                    conn.setConnectTimeout(15000);
+                    Log.d("Login debug->","Connecting");
+                    conn.connect();
+                    Log.d("Login debug->", Integer.toString(conn.getResponseCode()));
+                    BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+                    StringBuilder sb = new StringBuilder();
+                    String output;
+                    while ((output = br.readLine()) != null) {
+                        sb.append(output);
+                    }
+                    JSONObject json = new JSONObject(sb.toString());
+                    Log.d("Login debug->",json.toString());
+                    if(json.getString("success").equals("True")) {
+                        Log.d("Login debug -> ", "Starting MapView");
+                        Intent intent = new Intent(Login.this, MapsActivity.class);
+                        intent.putExtra("userid",json.getString("userid"));
+                        Log.d("USERID Debug->","I am in login and my id is "+json.getString("userid"));
+                        startActivity(intent);
+                    } else {
+                        Login.this.runOnUiThread(new Runnable() {
+                            public void run() {
+                                Toast.makeText(getBaseContext(), ("Invalid Credentials!"),
+                                        Toast.LENGTH_SHORT).show();
+                            }
+                        });
+                    }
+                } catch (IOException e) {
+                    e.printStackTrace();
+                } catch (JSONException e) {
+                    e.printStackTrace();
+                }
+            }
+            }).start();
     }
     public void setOnClickListeners() {
         Button mLogin = (Button) findViewById(R.id.login_button);
@@ -78,16 +107,8 @@ public class Login extends AppCompatActivity {
             @Override
             public void onClick(View v) {
                 try {
-                    makeHttpLoginRequest();
+                    makeHttpLoginRequest(mUsername.getEditableText().toString(), mPassword.getEditableText().toString());
                 } catch (Exception e){e.printStackTrace();}
-//                if(mUsername.getText().toString().equals("midha") && mPassword.getText().toString().equals("pranav")) {
-//                    Log.d("Login debug -> ", "Starting MapView");
-//                    Intent intent = new Intent(Login.this, MapsActivity.class);
-//                    startActivity(intent);
-//                } else {
-//                    Toast.makeText(getBaseContext(), ("Invalid Credentials!"),
-//                            Toast.LENGTH_SHORT).show();
-//                }
             }
         });
 
